--- a/style.css
+++ b/style.css
@@ -5,12 +5,29 @@
 body {
     margin: 0;
     background: #000;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.wrapper {
+    position: absolute;
+    left: 100px;
+    top: 300px;
+}
+
+#game {
+    padding-top: 25px;
+    font-size: 35px;
+    width: 320px;
+    margin: auto;
+}
+
 
 .main {
     width: 320px;
     height: 620px;
-    margin: 100px auto 0;
+    margin: 25px auto 0;
     border: 10px solid silver;
     font-size:0;
 }
@@ -28,4 +45,22 @@ body {
 
 .fixedCell {
     background-color:rgb(80, 0, 155)
+}
+
+#next-tetro {
+    position: absolute;
+    top: 200px;
+    left: 200px+;
+    font-size: 0;
+}
+
+#game-over {
+    font-size: 100px;
+    color: green;
+    text-align: center;
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
